src/FinancialForce Accounting/objects/codaTransactionLineItem__c.object
<CustomObject>
    <fields>
        <fullName>ReverseChargeTaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reverse Charge Tax Code</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Reverse Charge Tax Code)</relationshipLabel>
        <relationshipName>TransactionLineItemsReverseChargeTaxCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StatementDate__c</fullName>
        <formula>BankReconciliation__r.StatementDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Tax Code 1)</relationshipLabel>
        <relationshipName>TransactionLineItemsTC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 2</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Tax Code 2)</relationshipLabel>
        <relationshipName>TransactionLineItemsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 3</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Tax Code 3)</relationshipLabel>
        <relationshipName>TransactionLineItemsTC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxGroup__c</fullName>
        <label>Tax Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <label>Transaction Number</label>
        <referenceTo>codaTransaction__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Transaction Line Item</label>
    <listViews>
        <fullName>BankReconciliation</fullName>
        <columns>BankAccount__c</columns>
        <columns>BankAccountValue__c</columns>
        <columns>Account__c</columns>
        <columns>LineDescription__c</columns>
        <columns>BankReconciliation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BankAccount__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>BankReconciliation__c</field>
            <operation>equals</operation>
        </filters>
        <label>Bank Reconciliation</label>
    </listViews>
    <listViews>
        <fullName>BankReconciliationAll</fullName>
        <columns>BankAccount__c</columns>
        <columns>BankAccountValue__c</columns>
        <columns>Account__c</columns>
        <columns>LineDescription__c</columns>
        <columns>BankReconciliation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BankAccount__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Bank Reconciliation - All</label>
    </listViews>
    <listViews>
        <fullName>BankReconciliationAvailable</fullName>
        <columns>BankAccount__c</columns>
        <columns>BankAccountValue__c</columns>
        <columns>Account__c</columns>
        <columns>LineDescription__c</columns>
        <columns>BankReconciliation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BankAccount__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>BankReconciliation__c</field>
            <operation>equals</operation>
        </filters>
        <label>Bank Reconciliation - Available</label>
    </listViews>
    <listViews>
        <fullName>BankReconciliationReconciled</fullName>
        <columns>BankAccount__c</columns>
        <columns>BankAccountValue__c</columns>
        <columns>Account__c</columns>
        <columns>LineDescription__c</columns>
        <columns>BankReconciliation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BankAccount__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>BankReconciliation__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Bank Reconciliation - Reconciled</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>